clear button styling

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <div id="inputs"></div>
         <br>
         <input type="submit" class="button" value="Lookup">
+        <input type="button" class="button small" value="Reset">
       </form>
-      <input type="button" class="button" value="Clear">
       <div id="results">
-      
-      </div>
+      </div> 
     </div>
     <script type="module" src="/main.js"></script>
   </body>
