added debug and remove prefix

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <br>
         <div id="inputs"></div>
         <br>
+        <p id="debug"></p>
+        <br>
         <input type="submit" class="button" value="Lookup">
         <input type="button" class="button small" value="Reset">
       </form>
