--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <h1>Crossword Lookup</h1>
       <form id="crosswordForm" action="">
-        <label for="size">Length:</label>
+        <label for="size">Word length:</label>
         <select id="length" name="length">
         </select>
         <br>
