--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crossword Lookup</title>
+    <title>Crossword Lookup v0.2</title>
   </head>
   <body>
     <div id="app">
@@ -20,7 +20,7 @@
         <input type="button" class="button small" value="Reset">
       </form>
       <div id="results">
-      </div> 
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
